--- a/alw_gelan_pub/build.gradle
+++ b/alw_gelan_pub/build.gradle
@@ -8,6 +8,11 @@ defaultTasks 'transferAlwGelan'
 task transferAlwGelan(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    // Bei den folgenden Parametern bedeutet z.B. "publikationsjahr_wechsel_herbst:2019":
+    // Von den Datensätzen, bei denen jeweils im Herbst die Daten des neuen Jahres aufgeschaltet werden,
+    // soll gegenwärtig der Stand 2019 publiziert werden.
+    // Die Umstellung dieser Werte wird jeweils auf Verlangen des ALW zum gewünschten Zeitpunkt umgesetzt.
+    sqlParameters = [publikationsjahr_wechsel_fruehling:'2019', publikationsjahr_wechsel_herbst:'2019']
     transferSets = [
             new TransferSet('alw_gelan_pub_bienenstandorte.sql', 'alw_gelan_pub.bienenstandorte', true),
             new TransferSet('alw_gelan_pub_feuerbrand_schutzobjekte.sql', 'alw_gelan_pub.feuerbrand_schutzobjekte',
