--- a/agi_plz_ortschaften_pub/build.gradle
+++ b/agi_plz_ortschaften_pub/build.gradle
@@ -38,9 +38,22 @@ task unzipData(type: Copy, dependsOn: 'download'){
     include "**/*.itf"
 }
 
-
 task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
-    description = "Import plz_ortschaften-Data into database"
+    description = "Import plz_ortschaften-Data into Edit database"
+    doLast {
+        println "Data imported into db: " + dbUriEdit
+    }
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    dbschema = "agi_plz_ortschaften"
+    models = "PLZOCH1LV95D"
+    disableValidation = false
+    dataFile = file(xtfFilePath)
+    deleteData = true
+    strokeArcs = true
+}
+
+task dbImportSogis(type: Ili2pgImport, dependsOn: 'dbImport'){
+ description = "Import plz_ortschaften-Data into Sogis database"
     doLast {
         println "Data imported into db: " + dbUriSogis
     }
@@ -53,19 +66,62 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
     strokeArcs = true
 }
 
-
-task convertData(type: Db2Db, dependsOn: 'dbImport'){
-    description = "Convert plz_ortschaften-Data"
+task convertDataEdit(type: SqlExecutor, dependsOn: 'dbImportSogis'){
+    description = "Convert plz_ortschaften-Data to Edit Schema"
     doLast {
         println "plz_ortschaften-Data are converted."
     }
+	database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    sqlFiles = [
+            'delete_ortschaft.sql',
+            'delete_postleitzahl.sql',
+            'insert_ortschaft.sql',
+            'insert_postleitzahl.sql',
+	]
+}
+
+task convertDataSogis(type: SqlExecutor, dependsOn: 'convertDataEdit'){
+    description = "Convert plz_ortschaften-Data to Sogis Schema"
+    doLast {
+        println "plz_ortschaften-Data are converted."
+    }
+	database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sqlFiles = [
+            'delete_ortschaft.sql',
+            'delete_postleitzahl.sql',
+            'insert_ortschaft.sql',
+            'insert_postleitzahl.sql',
+	]
+}
+
+task copyDataPub(type: Db2Db, dependsOn: 'convertDataSogis'){
+    description = "Copy plz_ortschaften-Data to Pub Schema"
+    doLast {
+        println "plz_ortschaften-Data are copied."
+    }
     finalizedBy 'removeFiles'
 
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('plzortschaften_ortschaft.sql', 'agi_plz_ortschaften_pub.plzortschaften_ortschaft', true),
-            new TransferSet('plzortschaften_postleitzahl.sql', 'agi_plz_ortschaften_pub.plzortschaften_postleitzahl', true)
+            new TransferSet('plzortschaften_ortschaft_pub.sql', 'agi_plz_ortschaften_pub.plzortschaften_ortschaft', true),
+            new TransferSet('plzortschaften_postleitzahl_pub.sql', 'agi_plz_ortschaften_pub.plzortschaften_postleitzahl', true)
+    ];
+}
+
+
+task copyDataSogisPub(type: Db2Db, dependsOn: 'copyDataPub'){
+    description = "Copy plz_ortschaften-Data to Sogis Pub"
+    doLast {
+        println "plz_ortschaften-Data are copied."
+    }
+    finalizedBy 'removeFiles'
+
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('plzortschaften_ortschaft_pub.sql', 'agi_plz_ortschaften_pub.plzortschaften_ortschaft', true),
+            new TransferSet('plzortschaften_postleitzahl_pub.sql', 'agi_plz_ortschaften_pub.plzortschaften_postleitzahl', true)
     ];
 }
 
