--- a/agi_plz_ortschaften_pub/build.gradle
+++ b/agi_plz_ortschaften_pub/build.gradle
@@ -9,7 +9,7 @@ apply plugin: "de.undercouch.download"
 apply plugin: 'ch.so.agi.gretl'
 
 
-defaultTasks 'convertDataSogis'
+defaultTasks 'convertData'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
