--- a/afu_altlasten_pub/build.gradle
+++ b/afu_altlasten_pub/build.gradle
@@ -1,16 +1,36 @@
+/*
+Falls nach der Anpassung des Datenflusses für Oereb noch ein Thema:
+Dieser Datenfluss muss an der Quelle bereinigt werden. 
+Dafür muss geops eine neue bereinigte View erstellen, welche alle
+notwendigen Informationen in einfach verständlicher Form zur Verfügung stellt:
+- In der offenen Ansicht zu zeigende Objekte
+- In der geschützten Ansicht zusätzlich zu zeigende Objekte
+- Filterspalte, mit welcher die geschützten Objekte aus dem
+öffentlichen DataSetView herausgefiltert werden können.
+Die Filterspalte kann beispielsweise [protected] heissen,
+mit Wert 'true' für alle zugriffsgeschützten Objekte
+*/
+
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
 
-defaultTasks 'transferAfuAltlast4Web'
+defaultTasks 'transferAfuAltlasten', 'transferAfuAltlast4Web'
+
+task transferAfuAltlasten(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('afu_altlasten_pub_belastete_standorte.sql','afu_altlasten_pub.belastete_standorte', true)
+    ];        
+}
 
 task transferAfuAltlast4Web(type: Db2Db){
     sourceDb = [dbUriAltlast4web, dbUserAltlast4web, dbPwdAltlast4web]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('afu_altlasten_pub_belastete_standorte_altlast4web.sql',
-                    'afu_altlasten_pub.belastete_standorte_altlast4web', true)
+            new TransferSet('afu_altlasten_pub_belastete_standorte_altlast4web.sql', 'afu_altlasten_pub.belastete_standorte_altlast4web', true)
     ];
 }
